Allow more characters in API Key names
This change allows for more characters to appear in our key names.
Specifically, "." and "/" are valid in Kubernetes labels and taints, but were
disallowed by the existing API system.

The size of this change reflects some of the complexity of keys:
* Their names are used commonly in discussions, documentation, user data, and
  code.  We want the names to be convenient to reference.
* Their naming has security considerations.  The character set of key names
  might not line up with the allowed character set in the data store
  implementation, for example dots and slashes in the filesystem.
* They're used everywhere in API-related code, so while we add functionality
  and security, we can't make them hard to use.

Here are the changes at 30,000 feet:
* Special characters in key names are percent-encoded ("URL-encoded") when used
  as filenames on the filesystem.  For example, "%2E" for "."
* Key names are "TOML-quoted" elsewhere.  This fits usage in user data, and is
  relatively intuitive.  For example:
    settings.kubernetes.node-labels."group.name"
  This key name leads to "group.name" being a single segment instead of two,
  and therefore "group.name" being the name of a Kubernetes label.
* Key name segments in API requests and responses don't need to be quoted
  because they're already separated structurally, for example:
    {"settings": {"kubernetes": {"node-labels": {"group.name": "value"}}}}
* No existing key names or file paths have to change, because keys without
  special characters are still valid in both schemes.

Here are the changes at 10,000 feet:
* Key names are treated as a series of segments, rather than a single string.
  This allows for more precise specification and testing of names.
* Key names are parsed and encoded from segments, rather than checking them
  with a regex.
* Key name stripping / appending is done more carefully, by segment.
* Internal functions (for example in the data store) take Keys r

--- a/workspaces/api/apiserver/Cargo.toml
+++ b/workspaces/api/apiserver/Cargo.toml
@@ -9,9 +9,8 @@ build = "build.rs"
 [dependencies]
 actix-web = { version = "1.0.5", default-features = false, features = ["uds"] }
 base64 = "0.10"
-lazy_static = "1.2"
 log = "0.4"
-regex = "1.1"
+percent-encoding = "2.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simplelog = "0.7"
