--- a/workspaces/updater/tough/Cargo.toml
+++ b/workspaces/updater/tough/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1.0.39"
 sha2 = "0.8.0"
 snafu = "0.5.0"
 tough_schema = { path = "../tough_schema" }
+url = "1.7.2"
 
 [dev-dependencies]
 hex-literal = "0.2.0"
