--- a/workspaces/updater/tough/Cargo.toml
+++ b/workspaces/updater/tough/Cargo.toml
@@ -8,20 +8,17 @@ publish = false
 [dependencies]
 chrono = { version = "0.4.6", features = ["serde"] }
 hex = "0.4.0"
-reqwest = { version = "0.9.17", default-features = false }
+reqwest = { version = "0.9.17", optional = true, default-features = false }
 serde = "1.0.92"
 serde_json = "1.0.39"
 sha2 = "0.8.0"
 snafu = "0.5.0"
 tough_schema = { path = "../tough_schema" }
-url = "1.7.2"
+url = "2.1.0"
 
 [dev-dependencies]
 hex-literal = "0.2.0"
 tempfile = "3.1.0"
 
 [features]
-default = ["rustls-tls"]
-default-tls = ["reqwest/default-tls"]
-default-tls-vendored = ["reqwest/default-tls-vendored"]
-rustls-tls = ["reqwest/rustls-tls"]
+http = ["reqwest"]
