--- a/workspaces/updater/updog/Cargo.toml
+++ b/workspaces/updater/updog/Cargo.toml
@@ -12,6 +12,7 @@ log = "0.4"
 lz4 = "1.23.1"
 rand = "0.7.0"
 regex = "1.1"
+reqwest = { version = "0.9.17", default-features = false, features = ["rustls-tls"] }
 semver = "0.9.0"
 serde = { version = "1.0.100", features = ["derive"] }
 serde_json = "1.0.40"
@@ -21,7 +22,7 @@ simplelog = "0.7"
 snafu = "0.5.0"
 time = "0.1"
 toml = "0.5.1"
-tough = { path = "../tough" }
+tough = { path = "../tough", features = ["http"] }
 update_metadata = { path = "../update_metadata" }
 structopt = "0.3"
 
