--- a/workspaces/updater/tough/Cargo.toml
+++ b/workspaces/updater/tough/Cargo.toml
@@ -8,12 +8,16 @@ publish = false
 [dependencies]
 chrono = { version = "0.4.6", features = ["serde"] }
 hex = "0.4.0"
+olpc-cjson = { path = "../olpc-cjson" }
+pem = "0.6.0"
 reqwest = { version = "0.9.17", optional = true, default-features = false }
-serde = "1.0.92"
+ring = "0.16.7"
+serde = { version = "1.0.92", features = ["derive"] }
 serde_json = "1.0.39"
+serde_plain = "0.3.0"
 sha2 = "0.8.0"
 snafu = "0.5.0"
-tough_schema = { path = "../tough_schema" }
+untrusted = "0.7.0"
 url = "2.1.0"
 
 [dev-dependencies]
