relauto: use arn for bucket suffix config
The resource requires it to be a arn with the subpath suffix applied.

--- a/tools/infra/stacks/host-containers-pr-build.yml
+++ b/tools/infra/stacks/host-containers-pr-build.yml
@@ -100,8 +100,10 @@ Resources:
           Status: ENABLED
           Location:
             Fn::Join:
-              - ""
-              - - Ref: BuildLogBucket
+              - "/"
+              - - Fn::GetAtt:
+                  - BuildLogBucket
+                  - Arn
                 - "codebuild/log"
         CloudWatchLogs:
           Status: ENABLED
