--- a/tools/infra/stacks/thar-pr-build.yml
+++ b/tools/infra/stacks/thar-pr-build.yml
@@ -114,8 +114,10 @@ Resources:
           Status: ENABLED
           Location:
             Fn::Join:
-              - ""
-              - - Ref: BuildLogBucket
+              - "/"
+              - - Fn::GetAtt:
+                  - BuildLogBucket
+                  - Arn
                 - "codebuild/log"
         CloudWatchLogs:
           Status: ENABLED
