relauto: use component slug for logical ID
This generates the project name with a known and expected prefix. The
outputs will provide our other tools with the correct reference under a
conventional name in the Stacks' Outputs.

--- a/tools/infra/stacks/host-containers-pr-build.yml
+++ b/tools/infra/stacks/host-containers-pr-build.yml
@@ -51,7 +51,7 @@ Resources:
                     - ":"
                     - Ref: AWS::AccountId
                     - :log-group:/aws/codebuild/
-                    - Ref: BuildProject
+                    - Ref: HostContainersPullRequestBuild
               - Fn::Join:
                   - ""
                   - - "arn:"
@@ -61,13 +61,13 @@ Resources:
                     - ":"
                     - Ref: AWS::AccountId
                     - :log-group:/aws/codebuild/
-                    - Ref: BuildProject
+                    - Ref: HostContainersPullRequestBuild
                     - :*
         Version: "2012-10-17"
       PolicyName: BuildRolePolicy
       Roles:
         - Ref: BuildRole
-  BuildProject:
+  HostContainersPullRequestBuild:
     Type: AWS::CodeBuild::Project
     DependsOn:
       - BuildLogBucket
@@ -112,4 +112,4 @@ Outputs:
       Ref: BuildLogBucket
   Project:
     Value:
-      Ref: BuildProject
+      Ref: HostContainersPullRequestBuild
