--- a/tools/infra/stacks/infra-pr-build.yml
+++ b/tools/infra/stacks/infra-pr-build.yml
@@ -67,7 +67,7 @@ Resources:
                     - ":"
                     - Ref: AWS::AccountId
                     - :log-group:/aws/codebuild/
-                    - Ref: BuildProject
+                    - Ref: InfraPullRequestBuild
               - Fn::Join:
                   - ""
                   - - "arn:"
@@ -77,13 +77,13 @@ Resources:
                     - ":"
                     - Ref: AWS::AccountId
                     - :log-group:/aws/codebuild/
-                    - Ref: BuildProject
+                    - Ref: InfraPullRequestBuild
                     - :*
         Version: "2012-10-17"
       PolicyName: BuildRolePolicy
       Roles:
         - Ref: BuildRole
-  BuildProject:
+  InfraPullRequestBuild:
     Type: AWS::CodeBuild::Project
     DependsOn:
       - BuildArtifactBucket
@@ -130,4 +130,4 @@ Outputs:
       Ref: BuildLogBucket
   Project:
     Value:
-      Ref: BuildProject
+      Ref: InfraPullRequestBuild
