--- a/tools/infra/stacks/host-containers-pr-build.yml
+++ b/tools/infra/stacks/host-containers-pr-build.yml
@@ -1,23 +1,47 @@
+Parameters:
+  BuildSpecPath:
+    Type: String
+    AllowedPattern: '.+\.yml$'
+    Default: "./tools/infra/buildspec/host-containers-pr-build.yml"
+    Description: "The path to the buildspec.yml file to use."
+  SourceGitHubRepositoryURL:
+    Type: String
+    Default: "https://github.com/amazonlinux/PRIVATE-thar.git"
+    AllowedPattern: 'https://github.com/.+/.+\.git$'
+    ConstraintDescription: "Source URL must be a GitHub repository (with its .git suffix)"
+    Description: >-
+      The GitHub repository that builds run for. Your account must be authorized
+      to modify this repository's settings.
 Resources:
   BuildLogBucket:
     Type: AWS::S3::Bucket
     UpdateReplacePolicy: Retain
     DeletionPolicy: Retain
+
+  BuildLogGroup:
+    Type: AWS::Logs::LogGroup
+
   BuildRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
+        Version: "2012-10-17"
         Statement:
           - Action: sts:AssumeRole
             Effect: Allow
             Principal:
               Service: codebuild.amazonaws.com
-        Version: "2012-10-17"
+
   BuildRolePolicy:
     Type: AWS::IAM::Policy
     Properties:
+      Roles:
+        - !Ref BuildRole
+      PolicyName: BuildRolePolicy
       PolicyDocument:
+        Version: "2012-10-17"
         Statement:
+          # For managing cache, logs, and artifacts in the build's buckets.
           - Action:
               - s3:GetObject*
               - s3:GetBucket*
@@ -27,49 +51,23 @@ Resources:
               - s3:Abort*
             Effect: Allow
             Resource:
-              - Fn::GetAtt:
-                  - BuildLogBucket
-                  - Arn
+              - !GetAtt BuildLogBucket.Arn
               - Fn::Join:
                   - ""
-                  - - Fn::GetAtt:
-                        - BuildLogBucket
-                        - Arn
+                  - - !GetAtt BuildLogBucket.Arn
                     - /*
+          # For writing to CloudWatch Logs Streams for each build.
           - Action:
-              - logs:CreateLogGroup
               - logs:CreateLogStream
               - logs:PutLogEvents
             Effect: Allow
             Resource:
-              - Fn::Join:
-                  - ""
-                  - - "arn:"
-                    - Ref: AWS::Partition
-                    - ":logs:"
-                    - Ref: AWS::Region
-                    - ":"
-                    - Ref: AWS::AccountId
-                    - :log-group:/aws/codebuild/
-                    - Ref: HostContainersPullRequestBuild
-              - Fn::Join:
-                  - ""
-                  - - "arn:"
-                    - Ref: AWS::Partition
-                    - ":logs:"
-                    - Ref: AWS::Region
-                    - ":"
-                    - Ref: AWS::AccountId
-                    - :log-group:/aws/codebuild/
-                    - Ref: HostContainersPullRequestBuild
-                    - :*
-        Version: "2012-10-17"
-      PolicyName: BuildRolePolicy
-      Roles:
-        - Ref: BuildRole
-  HostContainersPullRequestBuild:
+              - !GetAtt BuildLogGroup.Arn
+
+  HostContainersPRBuild:
     Type: AWS::CodeBuild::Project
     DependsOn:
+      - BuildLogGroup
       - BuildLogBucket
       - BuildRole
     Properties:
@@ -79,24 +77,22 @@ Resources:
           Location:
             Fn::Join:
               - "/"
-              - - Fn::GetAtt:
-                  - BuildLogBucket
-                  - Arn
+              - - !GetAtt BuildLogBucket.Arn
                 - "codebuild/log"
         CloudWatchLogs:
           Status: ENABLED
+          GroupName: !Ref BuildLogGroup
+      Artifacts:
+        Type: NO_ARTIFACTS
       Environment:
         ComputeType: BUILD_GENERAL1_LARGE
         Image: aws/codebuild/standard:2.0
         PrivilegedMode: true
         Type: LINUX_CONTAINER
-      ServiceRole:
-        Fn::GetAtt:
-          - BuildRole
-          - Arn
+      ServiceRole: !GetAtt BuildRole.Arn
       Source:
-        BuildSpec: tools/infra/buildspec/host-containers-pr-build.yml
-        Location: https://github.com/amazonlinux/PRIVATE-thar.git
+        BuildSpec: !Ref BuildSpecPath
+        Location: !Ref SourceGitHubRepositoryURL
         ReportBuildStatus: true
         Type: GITHUB
       TimeoutInMinutes: 60
@@ -108,8 +104,6 @@ Resources:
 
 Outputs:
   LogBucket:
-    Value:
-      Ref: BuildLogBucket
+    Value: !Ref BuildLogBucket
   Project:
-    Value:
-      Ref: HostContainersPullRequestBuild
+    Value: !Ref HostContainersPRBuild
