--- a/tools/infra/stacks/thar-pr-build.yml
+++ b/tools/infra/stacks/thar-pr-build.yml
@@ -1,27 +1,52 @@
+Parameters:
+  BuildSpecPath:
+    Type: String
+    AllowedPattern: '.+\.yml$'
+    Default: "./tools/infra/buildspec/thar-pr-build.yml"
+    Description: "The path to the buildspec.yml file to use."
+  SourceGitHubRepositoryURL:
+    Type: String
+    Default: "https://github.com/amazonlinux/PRIVATE-thar.git"
+    AllowedPattern: 'https://github.com/.+/.+\.git$'
+    ConstraintDescription: "Source URL must be a GitHub repository (with its .git suffix)"
+    Description: >-
+      The GitHub repository that builds run for. Your account must be authorized
+      to modify this repository's settings.
 Resources:
   BuildArtifactBucket:
     Type: AWS::S3::Bucket
     UpdateReplacePolicy: Retain
     DeletionPolicy: Retain
+
   BuildLogBucket:
     Type: AWS::S3::Bucket
     UpdateReplacePolicy: Retain
     DeletionPolicy: Retain
+
+  BuildLogGroup:
+    Type: AWS::Logs::LogGroup
+
   BuildRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
+        Version: "2012-10-17"
         Statement:
           - Action: sts:AssumeRole
             Effect: Allow
             Principal:
               Service: codebuild.amazonaws.com
-        Version: "2012-10-17"
+
   BuildRolePolicy:
     Type: AWS::IAM::Policy
     Properties:
+      Roles:
+        - !Ref BuildRole
+      PolicyName: BuildRolePolicy
       PolicyDocument:
+        Version: "2012-10-17"
         Statement:
+          # For managing cache, logs, and artifacts in the build's buckets.
           - Action:
               - s3:GetObject*
               - s3:GetBucket*
@@ -31,65 +56,34 @@ Resources:
               - s3:Abort*
             Effect: Allow
             Resource:
-              - Fn::GetAtt:
-                  - BuildArtifactBucket
-                  - Arn
+              - !GetAtt BuildArtifactBucket.Arn
               - Fn::Join:
                   - ""
-                  - - Fn::GetAtt:
-                        - BuildArtifactBucket
-                        - Arn
+                  - - !GetAtt BuildArtifactBucket.Arn
                     - /*
-              - Fn::GetAtt:
-                  - BuildLogBucket
-                  - Arn
+              - !GetAtt BuildLogBucket.Arn
               - Fn::Join:
                   - ""
-                  - - Fn::GetAtt:
-                        - BuildLogBucket
-                        - Arn
+                  - - !GetAtt BuildLogBucket.Arn
                     - /*
+          # For writing to CloudWatch Logs Streams for each build.
           - Action:
-              - logs:CreateLogGroup
               - logs:CreateLogStream
               - logs:PutLogEvents
             Effect: Allow
             Resource:
-              - Fn::Join:
-                  - ""
-                  - - "arn:"
-                    - Ref: AWS::Partition
-                    - ":logs:"
-                    - Ref: AWS::Region
-                    - ":"
-                    - Ref: AWS::AccountId
-                    - :log-group:/aws/codebuild/
-                    - Ref: TharPullRequestBuild
-              - Fn::Join:
-                  - ""
-                  - - "arn:"
-                    - Ref: AWS::Partition
-                    - ":logs:"
-                    - Ref: AWS::Region
-                    - ":"
-                    - Ref: AWS::AccountId
-                    - :log-group:/aws/codebuild/
-                    - Ref: TharPullRequestBuild
-                    - :*
-        Version: "2012-10-17"
-      PolicyName: BuildRolePolicy
-      Roles:
-        - Ref: BuildRole
-  TharPullRequestBuild:
+              - !GetAtt BuildLogGroup.Arn
+
+  TharPRBuild:
     Type: AWS::CodeBuild::Project
     DependsOn:
       - BuildArtifactBucket
       - BuildLogBucket
+      - BuildLogGroup
       - BuildRole
     Properties:
       Artifacts:
-        Location:
-          Ref: BuildArtifactBucket
+        Location: !Ref BuildArtifactBucket
         Name: /
         NamespaceType: BUILD_ID
         Packaging: NONE
@@ -100,13 +94,10 @@ Resources:
         Image: aws/codebuild/standard:2.0
         PrivilegedMode: true
         Type: LINUX_CONTAINER
-      ServiceRole:
-        Fn::GetAtt:
-          - BuildRole
-          - Arn
+      ServiceRole: !GetAtt BuildRole.Arn
       Source:
-        BuildSpec: tools/infra/buildspec/thar-pr-build.yml
-        Location: https://github.com/amazonlinux/PRIVATE-thar.git
+        BuildSpec: !Ref BuildSpecPath
+        Location: !Ref SourceGitHubRepositoryURL
         ReportBuildStatus: true
         Type: GITHUB
       LogsConfig:
@@ -115,25 +106,22 @@ Resources:
           Location:
             Fn::Join:
               - "/"
-              - - Fn::GetAtt:
-                  - BuildLogBucket
-                  - Arn
+              - - !GetAtt BuildLogBucket.Arn
                 - "codebuild/log"
         CloudWatchLogs:
           Status: ENABLED
+          GroupName: !Ref BuildLogGroup
       TimeoutInMinutes: 180
       Triggers:
         Webhook: true
         FilterGroups:
           - - Type: EVENT
               Pattern: PULL_REQUEST_CREATED,PULL_REQUEST_UPDATED
+
 Outputs:
   ArtifactBucket:
-    Value:
-      Ref: BuildArtifactBucket
+    Value: !Ref BuildArtifactBucket
   LogBucket:
-    Value:
-      Ref: BuildLogBucket
+    Value: !Ref BuildLogBucket
   Project:
-    Value:
-      Ref: TharPullRequestBuild
+    Value: !Ref TharPRBuild
