--- a/workspaces/api/apiserver/Cargo.toml
+++ b/workspaces/api/apiserver/Cargo.toml
@@ -9,17 +9,20 @@ build = "build.rs"
 [dependencies]
 actix-web = { version = "1.0.5", default-features = false, features = ["uds"] }
 base64 = "0.10"
+lazy_static = "1.2"
+libc = "0.2"
 log = "0.4"
+nix = "0.15.0"
 percent-encoding = "2.1"
+regex = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simplelog = "0.7"
 snafu = "0.5"
-toml = "0.5"
-walkdir = "2.2"
 systemd = { version = "0.4.0", default-features = false, features = [], optional = true }
-nix = "0.15.0"
-libc = "0.2"
+toml = "0.5"
+url = "2.1"
+walkdir = "2.2"
 
 [features]
 default = ["sd_notify"]
