updog: Add support for query parameters in TUF requests
Implement a new tough transport 'Bark', which allows Updog to add extra
query parameters to requests to the TUF repository.

Updog now uses this to append the current image version to all requests.

Signed-off-by: Samuel Mendoza-Jonas <samjonas@amazon.com>

--- a/workspaces/updater/updog/Cargo.toml
+++ b/workspaces/updater/updog/Cargo.toml
@@ -26,6 +26,7 @@ tough = { version = "0.1.0", features = ["http"] }
 update_metadata = { path = "../update_metadata" }
 structopt = "0.3"
 migrator = { path = "../../api/migration/migrator" }
+url = "2.1.0"
 
 [dev-dependencies]
 tempfile = "3.1.0"
