migrations: Adds new migration for bumping host container versions
Adds migration for bumping the default admin and control container
versions from 0.1 to 0.2

--- a/workspaces/deny.toml
+++ b/workspaces/deny.toml
@@ -35,6 +35,7 @@ skip = [
     { name = "data_store_version", licenses = [] },
     { name = "growpart", licenses = [] },
     { name = "host-containers", licenses = [] },
+    { name = "host-containers-version-migration", licenses = [] },
     { name = "laika", licenses = [] },
     { name = "migration-helpers", licenses = [] },
     { name = "migrator", licenses = [] },
