--- a/workspaces/Cargo.toml
+++ b/workspaces/Cargo.toml
@@ -19,6 +19,7 @@ members = [
     # Migrations will be listed here.  They won't need to be listed as a
     # workspace member when we add cross-workspace dependencies.
     "api/migration/migrations/v0.1/borkseed",
+    "api/migration/migrations/v0.1/host-containers-version",
 
     "preinit/laika",
 
