build: remove cascade feature
Previously, doing a full build that respected the dependency graph
would cause almost every package to be rebuilt when the kernel was
updated, which happened at regular intervals.

The cascade feature was added to allow a developer to opt out of the
full dependency tracking in the interests of speeding up iterative
builds. However, making use of it required two full builds to get
cargo in sync, with no reliable way to predict whether either build
would be quick. This limited its usefulness in practice.

Now that the kernel is a leaf package, we will only rebuild the world
when glibc changes, which we expect to happen less often.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/acpid/Cargo.toml
+++ b/packages/acpid/Cargo.toml
@@ -14,9 +14,4 @@ sha512 = "c7afffdf9818504e1ac03b0ad693a05f772bfd07af9808262b3b6bb82ca4dabe6253c9
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
-glibc = { path = "../glibc", optional=true }
-
-[features]
-cascade = [
-    "glibc",
-]
+glibc = { path = "../glibc" }
