--- a/packages/libmnl/Cargo.toml
+++ b/packages/libmnl/Cargo.toml
@@ -14,9 +14,4 @@ sha512 = "e2bbfb688fe41913d53c74ba7ec95b4e88ee2c52b556b8608185f2fcbd629665423a3b
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
-glibc = { path = "../glibc", optional=true }
-
-[features]
-cascade = [
-    "glibc",
-]
+glibc = { path = "../glibc" }
