--- a/packages/libnetfilter_conntrack/Cargo.toml
+++ b/packages/libnetfilter_conntrack/Cargo.toml
@@ -14,13 +14,6 @@ sha512 = "5be5ed5daba385d11123a4e497c6334c6bb7e668594e667f85596619afe607f8783c08
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
-glibc = { path = "../glibc", optional=true }
-libmnl = { path = "../libmnl", optional=true }
-libnfnetlink = { path = "../libnfnetlink", optional=true }
-
-[features]
-cascade = [
-    "glibc",
-    "libmnl",
-    "libnfnetlink",
-]
+glibc = { path = "../glibc" }
+libmnl = { path = "../libmnl" }
+libnfnetlink = { path = "../libnfnetlink" }
