--- a/packages/containerd/Cargo.toml
+++ b/packages/containerd/Cargo.toml
@@ -14,11 +14,5 @@ sha512 = "cff9f0189b9fdc2b5492c92129af284aa8cd099e48de94cafd90aed191e2d20060c960
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
-glibc = { path = "../glibc", optional=true }
-libseccomp = { path = "../libseccomp", optional=true }
-
-[features]
-cascade = [
-    "glibc",
-    "libseccomp",
-]
+glibc = { path = "../glibc" }
+libseccomp = { path = "../libseccomp" }
