--- a/packages/libexpat/Cargo.toml
+++ b/packages/libexpat/Cargo.toml
@@ -15,9 +15,4 @@ sha512 = "727fbd24041c9af71b32353448583a6d8b38ddf93b10c97510e847939c2ad2be9b40ff
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
-glibc = { path = "../glibc", optional=true }
-
-[features]
-cascade = [
-    "glibc",
-]
+glibc = { path = "../glibc" }
