--- a/packages/libnetfilter_queue/Cargo.toml
+++ b/packages/libnetfilter_queue/Cargo.toml
@@ -14,13 +14,6 @@ sha512 = "89fec4d943b85f35e7cef3b1b9071b1280c6e1b282b7e5cb97eb17d05b9ddd17519463
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
-glibc = { path = "../glibc", optional=true }
-libmnl = { path = "../libmnl", optional=true }
-libnfnetlink = { path = "../libnfnetlink", optional=true }
-
-[features]
-cascade = [
-    "glibc",
-    "libmnl",
-    "libnfnetlink",
-]
+glibc = { path = "../glibc" }
+libmnl = { path = "../libmnl" }
+libnfnetlink = { path = "../libnfnetlink" }
