--- a/packages/libnfnetlink/Cargo.toml
+++ b/packages/libnfnetlink/Cargo.toml
@@ -14,9 +14,4 @@ sha512 = "2ec2cd389c04e21c8a02fb3f6d6f326fc33ca9589577f1739c23d883fe2ee9feaa16e8
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
-glibc = { path = "../glibc", optional=true }
-
-[features]
-cascade = [
-    "glibc",
-]
+glibc = { path = "../glibc" }
