--- a/packages/libnl/Cargo.toml
+++ b/packages/libnl/Cargo.toml
@@ -14,9 +14,4 @@ sha512 = "f7fa6987130b58e4a9cbe5401333a94eec4069324b760bb3a58b0dca74a767e5289e43
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
-glibc = { path = "../glibc", optional=true }
-
-[features]
-cascade = [
-    "glibc",
-]
+glibc = { path = "../glibc" }
