--- a/packages/login/Cargo.toml
+++ b/packages/login/Cargo.toml
@@ -10,9 +10,4 @@ path = "pkg.rs"
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
-glibc = { path = "../glibc", optional=true }
-
-[features]
-cascade = [
-    "glibc",
-]
+glibc = { path = "../glibc" }
