--- a/packages/util-linux/Cargo.toml
+++ b/packages/util-linux/Cargo.toml
@@ -14,15 +14,7 @@ sha512 = "94ada47e472b62a612c26fd5a5b7423e09366690a8a96f777191a5d920981eb0f22447
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
-glibc = { path = "../glibc", optional=true }
-libacl = { path = "../libacl", optional=true }
-libxcrypt = { path = "../libxcrypt", optional=true }
-ncurses = { path = "../ncurses", optional=true }
-
-[features]
-cascade = [
-    "glibc",
-    "libacl",
-    "libxcrypt",
-    "ncurses",
-]
+glibc = { path = "../glibc" }
+libacl = { path = "../libacl" }
+libxcrypt = { path = "../libxcrypt" }
+ncurses = { path = "../ncurses" }
