Remove hardcoded paths from repo canary
We can use a tempdir for the data store, since we don't use it persistently.

We can accept an argument for the trusted root path; local usage would probably
point to the root.json in the same directory, and container-based canary usage
can point to the root file in the directory it creates.

--- a/extras/repo-canary/Cargo.toml
+++ b/extras/repo-canary/Cargo.toml
@@ -11,4 +11,5 @@ rand = "0.7.0"
 reqwest = { version = "0.9.17", default-features = false, features = ["rustls-tls"] }
 simplelog = "0.7"
 snafu = "0.5.0"
+tempfile = "3.1.0"
 tough = { version = "0.1.0", features = ["http"] }
