updata: Validate migration names
Validate each migration name given to add-migrations so that they match
what the migrator tool will look for after an upgrade.

Signed-off-by: Samuel Mendoza-Jonas <samjonas@amazon.com>

--- a/workspaces/updater/updog/Cargo.toml
+++ b/workspaces/updater/updog/Cargo.toml
@@ -25,6 +25,7 @@ toml = "0.5.1"
 tough = { version = "0.1.0", features = ["http"] }
 update_metadata = { path = "../update_metadata" }
 structopt = "0.3"
+migrator = { path = "../../api/migration/migrator" }
 
 [dev-dependencies]
 tempfile = "3.1.0"
