--- a/packages/Cargo.toml
+++ b/packages/Cargo.toml
@@ -46,6 +46,7 @@ members = [
     "libpcre",
     "libseccomp",
     "libsepol",
+    "libselinux",
     "libstd-rust",
     "libxcrypt",
     "login",
