coreutils: enable selinux support
Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/coreutils/Cargo.toml
+++ b/packages/coreutils/Cargo.toml
@@ -17,4 +17,5 @@ glibc = { path = "../glibc" }
 libacl = { path = "../libacl" }
 libattr = { path = "../libattr" }
 libcap = { path = "../libcap" }
+libselinux = { path = "../libselinux" }
 libxcrypt = { path = "../libxcrypt" }
