--- a/workspaces/api/migration/migrator/Cargo.toml
+++ b/workspaces/api/migration/migrator/Cargo.toml
@@ -19,3 +19,11 @@ snafu = "0.5"
 
 [build-dependencies]
 cargo-readme = "3.1"
+
+[lib]
+name = "migrator"
+path = "src/lib.rs"
+
+[[bin]]
+name = "migrator"
+path = "src/main.rs"
