--- a/packages/util-linux/Cargo.toml
+++ b/packages/util-linux/Cargo.toml
@@ -15,5 +15,6 @@ sha512 = "94ada47e472b62a612c26fd5a5b7423e09366690a8a96f777191a5d920981eb0f22447
 [build-dependencies]
 glibc = { path = "../glibc" }
 libacl = { path = "../libacl" }
+libselinux = { path = "../libselinux" }
 libxcrypt = { path = "../libxcrypt" }
 ncurses = { path = "../ncurses" }
