--- a/packages/procps/Cargo.toml
+++ b/packages/procps/Cargo.toml
@@ -14,4 +14,5 @@ sha512 = "6d2db0e274399d69312564de37660c532a46c3963b8df3ff0e0df417610b15f2c01217
 
 [build-dependencies]
 glibc = { path = "../glibc" }
+libselinux = { path = "../libselinux" }
 ncurses = { path = "../ncurses" }
