--- a/packages/dbus-broker/dbus-1-system.conf
+++ b/packages/dbus-broker/dbus-1-system.conf
@@ -91,6 +91,8 @@
        holes in the above policy for specific services. -->
   <includedir>system.d</includedir>
 
-  <include if_selinux_enabled="yes" selinux_root_relative="yes">contexts/dbus_contexts</include>
+  <!-- Stub out security configuration for SELinux. -->
+  <selinux>
+  </selinux>
 
 </busconfig>
