--- a/packages/iproute/Cargo.toml
+++ b/packages/iproute/Cargo.toml
@@ -16,3 +16,4 @@ sha512 = "47c750da2247705b1b1d1621f58987333e54370d0fff2f24106194022de793ff35dfd6
 glibc = { path = "../glibc" }
 libcap = { path = "../libcap" }
 libmnl = { path = "../libmnl" }
+libselinux = { path = "../libselinux" }
